[project]
name = "amazing-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Guy Ray",email = "guy.ray@gmail.com"}
]
package-mode = false

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false